--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <div>
-  <h1>My Goals </h1>
-  <p>My goal today is {{goal}}</p>
+  <h1>PSY Quotes </h1>
+</div>
+<div class="container">
+<div class="row">
+  <div class="col-md-5">
+  <app-projects></app-projects>
+  </div>
+  <div class="col-md-7">
+    <h1>View Quotes</h1>
+  </div>
+</div>
 </div>
