Add detail to the the quote component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,10 @@
-<div>
-  <h1>PSY Quotes </h1>
-</div>
 <div class="container">
 <div class="row">
   <div class="col-md-5">
-  <app-projects></app-projects>
+   <app-new-quote-form></app-new-quote-form>
   </div>
   <div class="col-md-7">
-    <h1>View Quotes</h1>
+  <app-quote></app-quote>
   </div>
 </div>
 </div>
