--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,1 +1,3 @@
-<p>quote-details works!</p>
+<div>
+    By {{quote.author}}<br> Posted by {{quote.submitter}} {{ quote.time | timePassed }} ago
+</div>
