Add data and style vote component.

--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -1,1 +1,5 @@
-<p>vote works!</p>
+<div>
+    <button class="btn btn-dark" (click)="upvote();">Up Vote ({{quote.upvote}})</button>
+    <button class="btn btn-dark" (click)="downvote()">Down Vote ({{quote.downvote}})</button>
+</div>
+
