Tried fixing app-quote not a known element error.

--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -17,9 +17,9 @@
         </div>
 
         <div class="col-md-5 ">
-            <div id="quote-form" class="position-fixed ">
-                <app-quote-form (addNewQuote)="newQuote($event) ">
-                </app-quote-form>
+            <div id="new-quote-form" class="position-fixed ">
+                <app-new-quote-form (addNewQuote)="newQuote($event) ">
+                </app-new-quote-form>
             </div>
         </div>
     </div>
