Fix the quote is not a known element error.

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -5,7 +5,7 @@
     font-size: 2.3em;
     /* identical to box height */
     color: #000000;
-    background: #74c69d;
+    background: #FFE600;
     /* position: absolute; */
     top: 0;
     padding-top: 15px;
