--- a/src/app/components/quote-form/quote-form.component.css
+++ b/src/app/components/quote-form/quote-form.component.css
@@ -26,3 +26,9 @@ label {
     font-size: 0.9em;
     font-style: italic;
 }
+
+
+/* #submit {
+    color: rgb(255, 255, 255);
+    background-color: red;
+} */
