--- a/src/app/components/quote-details/quote-details.component.css
+++ b/src/app/components/quote-details/quote-details.component.css
@@ -1,5 +1,5 @@
 div {
-    font-family: Roboto;
+    font-family: 'Caveat';
     font-style: normal;
     font-size: 0.8em;
     margin-bottom: 10px;
