--- a/src/app/components/quote/quote.component.css
+++ b/src/app/components/quote/quote.component.css
@@ -1,7 +1,7 @@
         .quote-div {
             padding: 40px;
             padding-top: 40px;
-            border: 1px solid #afafaf;
+            border: 1px solid #1b4332;;
             background-color: white;
             box-sizing: border-box;
             border-radius: 10px;
@@ -9,7 +9,7 @@
         }
         
         #quote-form {
-            background-color: #474747;
+            background-color: #1b4332;
             border-radius: 25px 25px 0px 0px;
             padding: 50px;
             height: 100%;
@@ -18,6 +18,6 @@
         }
         
         .quote {
-            font-family: Montserrat;
+            font-family: 'Caveat';
             margin-bottom: 10px;
         }
