Style quotes and quotes details.

--- a/src/app/components/quote/quote.component.css
+++ b/src/app/components/quote/quote.component.css
@@ -18,6 +18,7 @@
         }
         
         .quote {
-            font-family: 'Caveat';
+            font-family: 'Raleway';
             margin-bottom: 10px;
+            font-size: 1.8em;
         }
