Fix form required fields and labels.

--- a/src/app/components/vote/vote.component.html
+++ b/src/app/components/vote/vote.component.html
@@ -1,4 +1,4 @@
 <div>
-    <button class="btn btn-dark" (click)="upvote();">Up Vote ({{quote.upvote}})</button>
-    <button class="btn btn-dark" (click)="downvote()">Down Vote ({{quote.downvote}})</button>
+    <button class="btn btn-success" (click)="upvote();">Up Vote ({{quote.upvote}})</button>
+    <button class="btn btn-danger" (click)="downvote()">Down Vote ({{quote.downvote}})</button>
 </div>
