--- a/src/app/components/quote-form/quote-form.component.html
+++ b/src/app/components/quote-form/quote-form.component.html
@@ -1,14 +1,14 @@
 <p id="form-title">New Quote</p>
 <form (ngSubmit)="submitQuote()" action="" #form="ngForm">
     <div class="form-group">
-        <label class="" for="name">Name</label><br>
+        <label class="" for="name">Author</label><br>
         <input class="form-control" type="text" id="name" name="name" [(ngModel)]="newQuote.submitter" required #name="ngModel">
         <div [hidden]="name.valid || name.pristine">
             This field is required.
         </div>
     </div>
     <div class="form-group">
-        <label class="" for="author">Quote's Author</label><br>
+        <label class="" for="author">Speaker</label><br>
         <input class="form-control w-100" type="text" id="author" name="author" [(ngModel)]="newQuote.author">
     </div>
     <div class="form-group">
@@ -18,6 +18,6 @@
     </div>
 
 
-    <button [disabled]="!form.valid" class="btn btn-warning">Submit</button>
+    <button [disabled]="!form.valid" class="btn btn-primary">Submit</button>
     <button type="reset" class="btn btn-light ml-3">Clear</button>
 </form>
