--- a/src/app/components/quote-details/quote-details.component.html
+++ b/src/app/components/quote-details/quote-details.component.html
@@ -1,3 +1,4 @@
 <div>
-    By {{quote.author}}<br> Posted by {{quote.submitter}} {{ quote.time | timePassed }} ago
+  By {{ quote.author }}<br />
+  Posted by {{ quote.submitter }} {{ quote.time | timePassed }} ago
 </div>
