--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,19 +1,19 @@
 #header {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 2.8em;
-    color: #1b4332;
-    background: #74c69d;
-    top: 0;
-    padding-top: 15px;
-    padding-bottom: 2px;
-    padding-left: 5%;
-    width: 100%;
-    position: fixed;
-    z-index: 1;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 2.8em;
+  color: #1b4332;
+  background: #74c69d;
+  top: 0;
+  padding-top: 15px;
+  padding-bottom: 2px;
+  padding-left: 5%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
 }
 
 #header span {
-    font-weight: 500;
+  font-weight: 500;
 }
