--- a/src/app/components/quote-details/quote-details.component.css
+++ b/src/app/components/quote-details/quote-details.component.css
@@ -1,6 +1,6 @@
 div {
-    font-family: 'Caveat';
-    font-style: normal;
-    font-size: 1.2em;
-    margin-bottom: 10px;
+  font-family: "Caveat";
+  font-style: normal;
+  font-size: 1.2em;
+  margin-bottom: 10px;
 }
