--- a/src/app/components/quote-form/quote-form.component.css
+++ b/src/app/components/quote-form/quote-form.component.css
@@ -1,27 +1,27 @@
 #form-title {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 1.8em;
-    line-height: 48px;
-    color: white;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.8em;
+  line-height: 48px;
+  color: white;
 }
 
 input,
 textarea {
-    background-color: transparent;
-    color: white;
-    border: solid 1px white;
-    border-radius: 5px;
+  background-color: transparent;
+  color: white;
+  border: solid 1px white;
+  border-radius: 5px;
 }
 
 textarea {
-    box-sizing: border-box;
-    width: 100%;
-    height: 150px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 150px;
 }
 
 label {
-    color: white;
-    font-size: 0.9em;
+  color: white;
+  font-size: 0.9em;
 }
